--- a/CS/inflearn_모든 개발자를 위한 HTTP 웹 기본지식/인터넷 네트워크.md
+++ b/CS/inflearn_모든 개발자를 위한 HTTP 웹 기본지식/인터넷 네트워크.md
@@ -2,3 +2,147 @@
 
 
 
+## IP(인터넷 프로토콜)
+
+클라이언트 - 서버
+
+클라이언트는 패킷에 출발지와 목적지, 내용을 담아서 서버로 보냄
+
+
+
+#### IP 프로토콜의 한계
+
+- 비연결성
+
+  -  서버 상태를 모름 : 패킷을 받을 대상이 없거나 서비스 불능 상태여도 패킷 전송
+
+- 비신뢰성
+
+  - 패킷 소실 - 중간에 패킷이 사라지면?
+
+  - 패킷 전달 순서 문제 발생 ex) 1. Hello / 2. World! : 
+
+    패킷이 순서대로 안오면?
+
+- 프로그램 구분
+
+  - 같은 IP에서 사용하는 서버에서 통신하느 애플리케이션이 둘 이상이면?
+
+
+
+이런 문제를 해결하는 것이 바로 TCP, UDP
+
+## TCP
+
+인터넷 프로토콜 스택의 4계층
+
+애플리케이션 계층 - HTTP, FTP
+
+전송 계층 - TCP, UDP
+
+인터넷 계층 - IP
+
+네트워크 인터페이스 계층
+
+
+
+##### IP 패킷 정보
+
+패킷 - 패키지 + 버킷 / 출발지 IP, 목적지 IP, 기당
+
+##### TCP/IP 패킷 정보
+
+TCP 세그먼트가 추가  - 출발지 PORT, 목적지 PORT,  전송 제어, 순서, 검증 정보...
+
+
+
+### TCP 특징(Transmission Control Protocol)
+
+전송 제어 프로토콜
+
+- 연결지향 - TCP 3 way handshake(가상 연결)
+- 데이터 전달 보증
+- 순서 보장
+
+
+
+- 신뢰할 수 있는 프로토콜
+- 현재는 대부분 TCP 사용
+
+#### TCP 3 way handshake (가상 연결)
+
+1. SYN : 클라이언트가 서버에 연결해달라는 신호
+2. SYN+ACK : 서버 승인과 동시에 연결 요청
+3. ACK : 클라이언트 승인 + 데이터 전송 가능
+
+----------- 검증 과정 ---------------------
+
+4. 데이터 전송
+
+
+
+#### 데이터 전달 보증
+
+1.데이터 전송
+
+2.데이터 잘 받았음
+
+
+
+#### 순서 보장
+
+1. 패킷1 ,패킷2, 패킷3 순서로 전송
+2. 패킷1, 패킷3, 패킷2 순서로 도착
+3. 패킷2부터 다시 보내
+
+
+
+### UDP 특징(User Datgram Protocol)
+
+사용자 데이터그램 프로토콜
+
+- 하얀 도화지에 비유(기능이 거의 없음)
+- 연결지향 - TCP 3 way handshake X 
+- 데이터 전달 보증 X 
+- 순서 보장 X 
+- 데이터 전달 및 순서가 보장되지 않지만, 단순하고 빠름 
+- 정리 
+  - IP와 거의 같다. +PORT +체크섬 정도만 추가 
+  - 애플리케이션에서 추가 작업 필요
+
+
+
+###### TCP vs UDP
+
+TCP 는 손을 댈 수 없다
+
+최적화하기 위해서 UDP를 손대면 된다.
+
+최근에 UDP가 각광받는 이유, HTTP3에서는 UDP를 도입 시간을 줄이기 위해서
+
+
+
+## PORT
+
+한번에 둘 이상 연결해야 할 때 문제가 생김
+
+같은 IP 내에서 프로세스를 구분 하는 것이 PORT
+
+![image-20210614141243053](C:\Users\mohai\AppData\Roaming\Typora\typora-user-images\image-20210614141243053.png)
+
+IP가 아파트, PORT 는 몇동 몇호
+
+0~65535 할당가능
+
+0~1023 잘 알려진 포트, 사용하지 않는 것 이 좋음
+
+
+
+## DNS (Domain Name System)
+
+IP는 기억하기 어렵다. ex) 200.200.200.2 , 100.100.100.1
+
+IP는 변경될 수 있다.
+
+DNS 서버에서는 google.com 주소로 IP 주소를 연결해줌
+
