--- a/JS/inflearn_Node.js_zeroCho/2장.md
+++ b/JS/inflearn_Node.js_zeroCho/2장.md
@@ -47,3 +47,11 @@ this를 쓰는 경우 function을 사용
 ### 5. 구조분해 할당
 
 this를 사용하고 있을 때 구조분해 할당 안하는게 좋다
+
+
+
+### 6. 클래스
+
+프로토타입 문법을 깔끔하게 작성할 수 있는 문법
+
+Constructor 와 Extends를 깔끔하게 처리할 수 있음.
