--- a/JS/inflearn_Node.js_zeroCho/2장.md
+++ b/JS/inflearn_Node.js_zeroCho/2장.md
@@ -55,3 +55,45 @@ this를 사용하고 있을 때 구조분해 할당 안하는게 좋다
 프로토타입 문법을 깔끔하게 작성할 수 있는 문법
 
 Constructor 와 Extends를 깔끔하게 처리할 수 있음.
+
+
+
+### 7. 프로미스
+
+내용이 실행은 되었지만 결과를 아직 반환하지 않은 객체
+
+Then을 붙이면 결과를 반환함
+
+CallBack에서 Promise로 전환되는 중
+
+Promise.all(배열) : 여러 개의 프로미스를 동시에 실행
+
+- 하나라도 실패하면 catch로 감
+- allSettled로 실패한 것만 추려낼 수 있음
+
+
+
+### 8. async / await
+
+await이 then 역할을 한다.
+
+await을 사용할 대는 async가 붙어야 한다.
+
+```javascript
+const promise = new Promise(...)
+promise.the((result) => ...)
+
+async function main() {
+  try{
+    const result = await promise;
+    return 'zerocho';
+  } catch (error) {
+      console.log(error);
+  }
+}
+
+main().then((name) => ...)
+or
+const name = await main()
+```
+
