--- a/JS/inflearn_Node.js_zeroCho/2장.md
+++ b/JS/inflearn_Node.js_zeroCho/2장.md
@@ -97,3 +97,29 @@ or
 const name = await main()
 ```
 
+
+
+## 2.3 Frontend 자바스크립트
+
+### 1. AJAX
+
+서버로 요청을 보내는 코드
+
+Axios 라이브러리를 사용하는 게 편함
+
+### 2. FormData
+
+Html form 태그에 담긴 데이터를 AJAX 요청으로 보내고 싶은 경우
+
+### 3.encodeURIComponent
+
+가끔 주소창에 한글 입력하면 서버가 처리하지 못하는 경우 해결
+
+### 4. data attribute 와 dataset
+
+HTML 태그에 데이터를 저장하는 방법
+
+공개된 데이터만 저장할 수 있다
+
+
+
