--- a/JS/inflearn_Node.js_zeroCho/3장.md
+++ b/JS/inflearn_Node.js_zeroCho/3장.md
@@ -1,2 +1,19 @@
 # 3장
 
+## 3.1 REPL 사용하기
+
+JS는 스크립트 언어라서 즉석으로 코드 실행가능
+
+- REPL 이라는 콘솔 제공
+- Read, Evaluate, Print, Loop
+
+
+
+## 3.3 모듈로 만들기
+
+노드는 자바스크립트 코드를 모듈로 만들 수 있음
+
+```javascript
+const{odd, even} = require('./var');
+```
+
