IT 시스템 정리

--- a/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/소개.md
+++ b/MSA/Spring Cloud로 개발하는 마이크로서비스 애플리케이션(MSA)/소개.md
@@ -18,3 +18,15 @@ IT 시스템의 변천사
 
 ![image-20221230161954950](images/image-20221230161954950.png)
 
+
+
+## Anti-Fragile
+
+- Auto Scaling
+- MicroServices
+  - 넷플릭스의 MicroServie 구조
+  - ![To be a microservice: How smaller parts of bigger applications could remake  IT | ZDNET](https://www.zdnet.com/a/img/2018/07/30/3cd011df-430d-4cda-aab8-e6ae707eac1b/netflix-microservices-diagram-bruce-wong.jpg)
+- Choas engineering
+  - 예측 못한 순간도 견딜 수 있도록 견고한 설계를 가져간다.
+- Continuous deployments
+  - 배포 파이프라인을 통해 지속적인 통합과 배포
