--- a/Spring/토비의 스프링 부트/1. 스프링부트 살펴보기.md
+++ b/Spring/토비의 스프링 부트/1. 스프링부트 살펴보기.md
@@ -27,6 +27,8 @@
 
 ServletContainer에 대한 이해도가 필요하고 학습곡선이 필요하다. 프로젝트마다 서블릿 컨테이너를 구성하기에는 리소스가 많이 발생한다. 설치하고 관리하는 것을 개발자의 수고없이 해결하고 싶다. 해서 나온게 스프링 부트
 
+- Servlet에 대한 고민없이 스프링 빈만 개발자가 고민할 수 있도록 만들어준다.
+
 
 
 # Opinionated
